# SAIEngine

./: .gitignore  CMakeLists.txt  README.md
code/: Actor.cpp  Actor.h  AudioManager.cpp  AudioManager.h  ComponentManager.h  EngineTools.h  GameData.cpp  GameData.h  GameSetup.cpp  GameSetup.h  Image.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h  JSONReader.h  LuaManager.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  TemplateManager.cpp  TemplateManager.h  TextManager.cpp  TextManager.h  main.cpp
include/LuaBridge/detail/: FuncTraits.h
libraries/Linux/FluidSynth/: libfluidsynth.so.3  libfluidsynth.so.3.5.3
libraries/Linux/SDL3_image/: libSDL3_image.so.0.4.2
libraries/Linux/SDL3_mixer/: libSDL3_mixer.so.0.2.0
libraries/Linux/SDL3_ttf/: libSDL3_ttf.so.0.1.0
libraries/OSX/FluidSynth/: libfluidsynth.3.5.3.dylib  libfluidsynth.3.dylib  libfluidsynth.dylib
libraries/OSX/SDL3/: libSDL3.0.dylib
libraries/OSX/SDL3_image/: libSDL3_image.0.4.2.dylib
libraries/OSX/SDL3_mixer/: libSDL3_mixer.0.2.0.dylib  libSDL3_mixer.0.dylib
libraries/OSX/SDL3_ttf/: libSDL3_ttf.0.2.2.dylib
